Deployment/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostspace-frontend
  namespace: hostspace-namespace
  labels:
    app: hostspace-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostspace-frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: hostspace-frontend
        tier: frontend
    spec:
      containers:
        - name: hostspace-frontend
          image: fynewily/hostspace-challenge:frontend-v1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
