Deployment/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hostspace-backend
  namespace: hostspace-namespace
spec:
  selector:
    app: hostspace-backend
    tier: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
