Deployment/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hostspace-frontend
  namespace: hostspace-namespace
spec:
  selector:
    app: hostspace-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
