Deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostspace-ingress
  namespace: hostspace-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx" 
spec:
  ingressClassName: nginx
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hostspace-frontend
                port:
                  number: 80
     - http:
        paths:
          - path: /proxy
            pathType: Prefix
            backend:
              service:
                name: hostspace-backend
                port:
                  number: 5000
